<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bilal.mandomc</groupId>
    <artifactId>MandoMC</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>MandoMC</name>

    <!-- Java Version -->
    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Repositories -->
    <repositories>

        <!-- Paper -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <!-- PlaceholderAPI -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.helpch.at/releases/</url>
        </repository>

        <!-- Lumine (MythicMobs) -->
        <repository>
            <id>lumine</id>
            <name>Lumine Releases</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>

        <!-- FactionsUUID -->
        <repository>
            <id>factionsuuid-repo</id>
            <url>https://dependency.download/releases</url>
        </repository>

        <repository>
            <id>fancyinnovations-releases</id>
            <name>FancyInnovations Repository</name>
            <url>https://repo.fancyinnovations.com/releases</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

    </repositories>

    <!-- Dependencies -->
    <dependencies>

        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- MythicMobs -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.6.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- FactionsUUID -->
        <dependency>
            <groupId>dev.kitteh</groupId>
            <artifactId>factionsuuid</artifactId>
            <version>0.7.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- ModelEngine -->
        <dependency>
            <groupId>com.ticxo.modelengine</groupId>
            <artifactId>ModelEngine</artifactId>
            <version>R4.0.9</version>
            <scope>provided</scope>
        </dependency>

        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.12.2</version>
            <scope>provided</scope>
        </dependency>

        <!-- WeaponMechanics -->
        <dependency>
            <groupId>com.cjcrafter</groupId>
            <artifactId>weaponmechanics</artifactId>
            <version>4.2.2</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.cjcrafter</groupId>
            <artifactId>mechanicscore</artifactId>
            <version>4.2.2</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>de.oliver</groupId>
            <artifactId>FancyHolograms</artifactId>
            <version>2.9.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.4.0</version>
        </dependency>

        <!-- HikariCP connection pool -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- Build Settings -->
    <build>
        <finalName>MandoMC</finalName>

        <plugins>

            <!-- Java Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>

            <!-- JUnit 5 runner -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>

            <!-- Auto-copy jar to your server -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>

                <executions>
                    <execution>
                        <id>copy-to-server</id>
                        <phase>package</phase>

                        <goals>
                            <goal>run</goal>
                        </goals>

                        <configuration>
                            <target>
                                <copy file="${project.build.directory}/${project.build.finalName}.jar"
                                      todir="/Users/bilal/Desktop/coding/spigot/testServer/plugins/" />
                            </target>
                        </configuration>

                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>